# brimir

./: .gitignore  .gitmodules  ARCHITECTURE.md  BUILD_JIT_TESTS.md  CHANGELOG.md  CMakeLists.txt  CODEBASE_EVALUATION_AND_OPTIMIZATION_TARGETS.md  CONTRIBUTING.md  ENVIRONMENT_SETUP.md  HORIZONTAL_BLEND_IMPLEMENTATION.md  MEDNAFEN_FEATURE_PARITY.md  Makefile.libretro  OPTIMIZATION_DEINTERLACING_DETAILS.md  OPTIMIZATION_GUIDE.md  PHASE1_SETUP_CHECKLIST.md  PHASE1_SUMMARY.txt  PHASE1_WEEK1_COMPLETE.md  PHASE2_PROGRESS.txt  PRD.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  ROADMAP.md  SESSION_SUMMARY.md  STATUS.md  TESTING_STRATEGY.md  TEST_SUITE_COMPLETION_REPORT.md  TEST_SUITE_UPDATE_SUMMARY.md  WARNINGS_ANALYSIS.md  WEEK2_PROGRESS.md  WEEK2_SUCCESS.md  YMIR_HW_ADOPTION.md  brimir_libretro.info  build-all.ps1  build-wsl.ps1  build.ps1  build.sh  build_errors.txt  build_log.txt  build_output_tail.txt  (+5 more)
src/bridge/: CMakeLists.txt  audio_manager.cpp  core_wrapper.cpp  input_manager.cpp  state_manager.cpp  video_manager.cpp
src/bridge/stv/: ISSUES.md  stv_315_5881.cpp  stv_315_5881.hpp  stv_cartridge.cpp  stv_cartridge.hpp  stv_game_db.cpp  stv_game_db.hpp  stv_io.cpp  stv_io.hpp  stv_loader.cpp  stv_loader.hpp  stv_zip.cpp  stv_zip.hpp
src/core/: CMakeLists.txt
src/core/include/brimir/: brimir.hpp  vdp_profiling.hpp  version.hpp
src/core/include/brimir/core/: configuration.hpp  configuration_defs.hpp  hash.hpp  scheduler.hpp  scheduler_defs.hpp
src/core/include/brimir/db/: cdb_rom_db.hpp  game_db.hpp  ipl_db.hpp  rom_cart_db.hpp
src/core/include/brimir/debug/: cd_drive_tracer_base.hpp  cdblock_tracer_base.hpp  debug_break.hpp  scsp_tracer_base.hpp  scu_tracer_base.hpp  sh2_tracer_base.hpp  watchpoint_defs.hpp  ygr_tracer_base.hpp
src/core/include/brimir/hw/: hw_defs.hpp  simd_utils.hpp
src/core/include/brimir/media/: cdrom_crc.hpp  disc.hpp  filesystem.hpp  frame_address.hpp  iso9660.hpp  media_defs.hpp  saturn_header.hpp  subheader.hpp
src/core/include/brimir/state/: state.hpp  state_cd_drive.hpp  state_cdblock.hpp  state_m68k.hpp  state_scheduler.hpp  state_scsp.hpp  state_scsp_dsp.hpp  state_scsp_slot.hpp  state_scsp_timer.hpp  state_scu.hpp  state_sh1.hpp  state_sh2.hpp  state_smpc.hpp  state_system.hpp  state_vdp.hpp  state_ygr.hpp
src/core/include/brimir/sys/: backup_ram.hpp  backup_ram_defs.hpp  bus.hpp  clocks.hpp  memory.hpp  memory_defs.hpp  saturn.hpp  system.hpp  system_features.hpp  system_internal_callbacks.hpp
src/core/include/brimir/util/: backup_datetime.hpp  benchmark.hpp  bit_ops.hpp  bitmask_enum.hpp  callback.hpp  cpu_features.hpp  data_ops.hpp  date_time.hpp  dev_assert.hpp  dev_log.hpp  event.hpp  function_info.hpp  inline.hpp  virtual_memory.hpp
src/core/include/ymir/: version.hpp
src/core/include/ymir/core/: configuration.hpp  hash.hpp  scheduler.hpp  scheduler_defs.hpp
src/core/include/ymir/db/: cdb_rom_db.hpp
src/core/include/ymir/debug/: cd_drive_tracer_base.hpp  debug_break.hpp  sh2_debug_defs.hpp  watchpoint_defs.hpp  ygr_tracer_base.hpp
src/core/include/ymir/hw/: hw_defs.hpp
src/core/include/ymir/media/: cdrom_crc.hpp  disc.hpp  filesystem.hpp  iso9660.hpp  saturn_header.hpp
src/core/include/ymir/savestate/: savestate.hpp  savestate_cd_drive.hpp  savestate_m68k.hpp  savestate_scheduler.hpp  savestate_scsp.hpp  savestate_scsp_dsp.hpp  savestate_scsp_slot.hpp  savestate_scsp_timer.hpp  savestate_scu.hpp  savestate_sh1.hpp  savestate_sh2.hpp  savestate_smpc.hpp  savestate_system.hpp  (+2 more)
src/core/src/: brimir.cpp  vdp_profiling.cpp
src/core/src/core/: configuration.cpp  hash.cpp
src/core/src/db/: cdb_rom_db.cpp  game_db.cpp  ipl_db.cpp  rom_cart_db.cpp
src/core/src/media/: cdrom_crc.cpp  filesystem.cpp  saturn_header.cpp
src/core/src/sys/: backup_ram.cpp  memory.cpp  null_program.hpp  saturn.cpp
src/core/src/util/: backup_datetime.cpp  cpu_features.cpp  date_time.cpp  event.cpp  process.cpp  thread_name.cpp  virtual_memory.cpp
src/jit/: CMakeLists.txt  CMakeLists_integration.txt  README.md  STATUS.md  test_runner.cpp
src/jit/include/: brimir_sh2_wrapper.hpp  jit_block_analyzer.hpp  jit_ir.hpp  jit_sh2_accessor.hpp  jit_test_framework.hpp  jit_validator.hpp  jit_x64_backend.hpp  sh2_spec.hpp  ymir_sh2_wrapper.hpp
src/jit/src/: jit_block_analyzer.cpp  jit_integration.cpp  jit_ir.cpp  jit_test_generator.cpp  jit_validator.cpp  jit_x64_codebuffer.cpp  jit_x64_codegen.cpp  jit_x64_register_alloc.cpp  sh2_spec.cpp  sh2_spec_arithmetic.cpp  sh2_spec_branch.cpp  sh2_spec_complete.cpp  sh2_spec_datatransfer_ext.cpp  sh2_spec_full.cpp  sh2_spec_master.cpp  sh2_spec_misc.cpp  sh2_spec_shift.cpp  sh2_spec_system.cpp
src/jit/src/validation/: block_test_generator.cpp  brimir_sh2_wrapper.cpp  control_flow_test_generator.cpp  fuzz_test_generator.cpp  game_regression_test.cpp  instruction_test_generator.cpp  jit_test_framework.cpp  ymir_sh2_wrapper.cpp
src/jit/tests/: test_runner.cpp
src/libretro/: CMakeLists.txt  libretro.cpp  options.cpp  options.hpp
tests/: CMakeLists.txt  QUICK_START.md  README.md  REGRESSION_FRAMEWORK.md  TEST_COVERAGE.md  TEST_PLAN.md  TEST_SUITE_STATUS.md  main.cpp
tests/fixtures/: README.md
tests/unit/: test_audio_output.cpp  test_audio_ring_buffer.cpp  test_basic.cpp  test_bios.cpp  test_bios_boot_sequence.cpp  test_bios_integration.cpp  test_cartridge_support.cpp  test_cd_operations.cpp  test_core_wrapper.cpp  test_game_loading.cpp  test_gpu_architecture.cpp  test_gpu_debug.cpp  test_gpu_infrastructure.cpp  test_gpu_rendering.cpp  test_gpu_validation.cpp  test_hardware_access.cpp  test_input_handling.cpp  test_memory_components.cpp  test_memory_map.cpp  test_options.cpp  test_regressions.cpp  test_save_states.cpp  test_scsp_audio.cpp  test_scu_components.cpp  test_scu_dma.cpp  test_sh2_cache.cpp  test_sh2_cpu.cpp  test_smpc_operations.cpp  test_sram_persistence.cpp  test_system_integration.cpp  test_vdp_color_calc.cpp  test_vdp_components.cpp  test_vdp_priority.cpp  test_vdp_registers.cpp  test_video_output.cpp
tools/: CMakeLists.txt  README.md  benchmark_sh2.cpp  run_benchmarks.ps1
(+373 files in other folders)
